src/objects/CRM_WF_URL_Secundarias__c.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Campo que tiene como única finalidad tealozre la sumatoria en el componente de lista relacionada dentro del objeto Canal</description>
        <label>Contador</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Cual_Es_La_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Page name (v1)</inlineHelpText>
        <label>¿Cuál es la URL?</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Donde_Va__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Dónde va?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_Del_Arte__c</fullName>
        <label>Nombre del Arte</label>
        <referenceTo>CRM_WF_Artes__c</referenceTo>
        <relationshipLabel>URL</relationshipLabel>
        <relationshipName>URL_secundarias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_WF_URL_Text__c</fullName>
        <description>Campo que se llena mediante un PB cada que el campo ¿Cual es la URL? Es modificado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Cuál es la URL?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folio_URL__c</fullName>
        <formula>CRM_WF_Nombre_Del_Arte__r.Name+ &quot;-&quot; + 
IF(
 ISBLANK(MX_WF_Otro__c), 
 SUBSTITUTE(TEXT(Nombre__c), &quot; &quot;, &quot;_&quot;), 
 SUBSTITUTE(MX_WF_Otro__c, &quot; &quot;, &quot;_&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Folio URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Ad_group_last_touch_channel_detail__c</fullName>
        <formula>CRM_WF_Nombre_Del_Arte__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad group (last touch channel detail)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_App_approved_e77__c</fullName>
        <label>App approved (e77)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_App_completed_e76__c</fullName>
        <label>App completed (e76)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_App_page_visits_e62__c</fullName>
        <label>App page visits (e62)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Application_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application flow name (v46)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>El valor no es un registro valido para Application Name</errorMessage>
            <filterItems>
                <field>GBL_WF_Catalogo_Canal__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>MX_WF_Application_Name</value>
            </filterItems>
            <infoMessage>Application Name</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GBL_WF_Catalogo_Canal__c</referenceTo>
        <relationshipName>URL_secundarias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WF_Campaign_last_touch_channel_detail__c</fullName>
        <formula>CRM_WF_Nombre_Del_Arte__r.CRM_WF_Nombre_Del_Brief__r.CRM_WF_Campana_Brief__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign (last touch channel detail)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Contratado_o_aprobado__c</fullName>
        <label>app approved (e57/e77)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Inicio_Flujo_Contratacion__c</fullName>
        <label>app page visits (e41/e62)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Last_touch_channel__c</fullName>
        <defaultValue>&quot;Email&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Last touch channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Otro__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Otro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_T_rmino_flujo_de_contrataci_n__c</fullName>
        <label>app completed (e55/e76)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Tracking_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Tracking_Code_fx__c</fullName>
        <formula>CRM_WF_Cual_Es_La_URL__c + &quot;?cid=oth:mem:oth:mexico---&quot; +  CRM_WF_Nombre_Del_Arte__r.GBL_WF_Producto__c + &quot;-&quot; +  CRM_WF_Nombre_Del_Arte__r.GBL_WF_Subproducto__c + &quot;-&quot; +    CRM_WF_Nombre_Del_Arte__r.MX_WF_Nombre_Campana_sin_Espacios__c + &quot;-&quot; +  CRM_WF_Nombre_Del_Arte__r.MX_WF_Business_Unit__c + &quot;:&quot; +  Folio_URL__c + &quot;:::::&quot; + TEXT(YEAR(CRM_WF_Nombre_Del_Arte__r.MX_WF_Fecha_de_envio_Solicitud__c)) + 
IF(
 MONTH(CRM_WF_Nombre_Del_Arte__r.MX_WF_Fecha_de_envio_Solicitud__c)&lt;10,
 &quot;0&quot;+TEXT(MONTH(CRM_WF_Nombre_Del_Arte__r.MX_WF_Fecha_de_envio_Solicitud__c)),
 TEXT(MONTH(CRM_WF_Nombre_Del_Arte__r.MX_WF_Fecha_de_envio_Solicitud__c)) 
)+ 
IF(
 DAY(CRM_WF_Nombre_Del_Arte__r.MX_WF_Fecha_de_envio_Solicitud__c)&lt;10,
 &quot;0&quot;+TEXT(DAY(CRM_WF_Nombre_Del_Arte__r.MX_WF_Fecha_de_envio_Solicitud__c)),
 TEXT(DAY(CRM_WF_Nombre_Del_Arte__r.MX_WF_Fecha_de_envio_Solicitud__c)) 
)+ 
&quot;:::&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracking Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Validacion_TC__c</fullName>
        <label>Validación TC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                    <default>true</default>
                    <label>Pendiente</label>
                </value>
                <value>
                    <fullName>Validado</fullName>
                </value>
                <value>
                    <fullName>No necesita</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Venta_de_Producto__c</fullName>
        <label>Venta de Producto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre__c</fullName>
        <inlineHelpText>Nombre</inlineHelpText>
        <label>Tracking Alias</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Logo BBVA</fullName>
                </value>
                <value>
                    <fullName>Foto Principal</fullName>
                </value>
                <value>
                    <fullName>CTA principal</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 1</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 1</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 2</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 2</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 3</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 3</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 4</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 4</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 5</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 5</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 6</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 6</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 7</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 7</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 8</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 8</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 9</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 9</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 10</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 10</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 11</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 11</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 12</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 12</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 13</fullName>
                </value>
                <value>
                    <fullName>CTA secundario texto 13</fullName>
                </value>
                <value>
                    <fullName>CTA secundario imagen 14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WF_WF_Visitas_Flujo_De_Contratacion__c</fullName>
        <label>Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WF_WF_Visitas_URL__c</fullName>
        <label>Visitas URL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WF_WF_Visitas_Unicas_URL__c</fullName>
        <label>Unique visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>URL</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MX_WF_Tracking_Code__c</columns>
        <columns>MX_WF_Tracking_Code_fx__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>URL-{000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>URLs</pluralLabel>
    <recordTypes>
        <fullName>MX_WF_URL</fullName>
        <active>true</active>
        <label>URL</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_URL_Secundaria</fullName>
        <active>true</active>
        <label>URL Secundaria</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MX_WF_Trackig_Alias</fullName>
        <active>true</active>
        <description>Solo debes llenar un campo: Tracking alias u otro</description>
        <errorConditionFormula>(NOT(ISPICKVAL( Nombre__c, &quot;&quot;))  &amp;&amp; NOT(ISBLANK( MX_WF_Otro__c )))
 || 
(ISPICKVAL( Nombre__c, &quot;&quot;) &amp;&amp; ISBLANK( MX_WF_Otro__c ))</errorConditionFormula>
        <errorDisplayField>Nombre__c</errorDisplayField>
        <errorMessage>Solo debes llenar un campo: Tracking alias u otro</errorMessage>
    </validationRules>
</CustomObject>